# BLang

./: .gitignore  CMakeLists.txt  README.md  test.bl
include/blang/: lexer.h
src/: lexer.cpp  main.cpp
test/: CMakeLists.txt  lexer_tests.cpp
website/: README.md  index.html  script.js  styles.css
website/lessons/: lesson10_complete.md  lesson1_foundations.md  lesson2_lexer.md  lesson3_parser.md  lesson3_parser_part2.md  lesson4_semantics.md  lesson5_type_system.md  lesson6_ir.md  lesson7_interpreter.md  lesson8_runtime.md  lesson9_stdlib.md
